--- a/app/src/main/res/layout/fr_change_password.xml
+++ b/app/src/main/res/layout/fr_change_password.xml
@@ -14,6 +14,7 @@
     </data>
 
     <ScrollView
+        style="@style/ScrollView.VerticalPinkScrollBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -31,7 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:viewModel="@{viewModel.toolbar}" />
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_screen_title"
                 style="@style/TextView.H5"
                 android:layout_width="match_parent"
@@ -49,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_40dp"
+                android:theme="@style/EditTextBaseTheme"
                 app:cliDrawableEnd="@{viewModel.currentPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::toggleCurrentPasswordVisible}"
                 app:cliError="@{viewModel.currentPasswordError}"
@@ -66,6 +68,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_28dp"
+                android:theme="@style/EditTextBaseTheme"
                 app:cliDrawableEnd="@{viewModel.newPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::toggleNewPasswordVisible}"
                 app:cliError="@{viewModel.newPasswordError}"
@@ -83,6 +86,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_28dp"
+                android:theme="@style/EditTextBaseTheme"
                 app:cliDrawableEnd="@{viewModel.confirmNewPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::toggleConfirmNewPassword}"
                 app:cliError="@{viewModel.confirmNewPasswordError}"
