--- a/app/src/main/res/layout/fr_quiz.xml
+++ b/app/src/main/res/layout/fr_quiz.xml
@@ -12,6 +12,7 @@
     </data>
 
     <ScrollView
+        style="@style/ScrollView.VerticalPinkScrollBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
