--- a/app/src/main/res/navigation/auth_graph.xml
+++ b/app/src/main/res/navigation/auth_graph.xml
@@ -62,7 +62,7 @@
         tools:layout="@layout/fr_validate_code">
         <argument
             android:name="codeReceivedViaType"
-            app:argType="com.wolfpackdigital.cashli.domain.entities.enums.CodeReceivedViaType" />
+            app:argType="com.wolfpackdigital.cashli.presentation.entities.enums.CodeReceivedViaType" />
         <action
             android:id="@+id/action_validateCodeFragment_to_choosePasswordFragment"
             app:destination="@id/choosePasswordFragment" />
@@ -116,13 +116,13 @@
             app:argType="string" />
         <argument
             android:name="codeReceivedViaType"
-            app:argType="string" />
+            app:argType="integer" />
         <action
             android:id="@+id/action_confirmOneTimePasswordFragment_to_resetPasswordFragment"
             app:destination="@id/resetPasswordFragment" />
         <argument
             android:name="fromEditProfile"
-            app:argType="string"
+            app:argType="boolean"
              />
         <deepLink app:uri="android-app://com.wolfpackdigital.cashli/confirmOneTimePassword/{phoneNumberOrEmail}/{codeReceivedViaType}/{fromEditProfile}"/>
 
