--- a/app/src/main/res/xml/low_balance_amount_description.xml
+++ b/app/src/main/res/xml/low_balance_amount_description.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="AnimatorKeep">
 
     <Transition
         app:constraintSetEnd="@+id/end"
