--- a/app/src/main/res/values/strings-no-translation.xml
+++ b/app/src/main/res/values/strings-no-translation.xml
@@ -19,4 +19,6 @@
 
     <string name="quiz_tip_amount_perc" translatable="false">%d%%</string>
     <string name="quiz_tip_amount_slider" translatable="false">%.1f%% - $%.2f</string>
+    <string name="account_bank_account_type_mask" translatable="false">%s ****%s</string>
+
 </resources>
