--- a/app/src/main/res/navigation/more_graph.xml
+++ b/app/src/main/res/navigation/more_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_moreFragment_to_helpFragment"
             app:destination="@id/helpFragment" />
+        <action
+            android:id="@+id/action_moreFragment_to_membershipFragment"
+            app:destination="@id/membershipFragment" />
     </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
@@ -51,4 +54,10 @@
         android:name="com.wolfpackdigital.cashli.presentation.changePassword.ChangePasswordFragment"
         android:label="ChangePasswordFragment"
         tools:layout="@layout/fr_change_password" />
+
+    <fragment
+        android:id="@+id/membershipFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.membership.MembershipFragment"
+        android:label="MembershipFragment"
+        tools:layout="@layout/fr_membership" />
 </navigation>
