--- a/app/src/main/res/layout/fr_membership.xml
+++ b/app/src/main/res/layout/fr_membership.xml
@@ -57,6 +57,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_20dp"
                 android:layout_marginTop="@dimen/dimen_64dp"
                 app:layout_constraintTop_toTopOf="@id/arc_view"
+                app:visibility="@{viewModel.membershipItem != null}"
                 app:viewModel="@{viewModel.membershipItem}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
