chore: cleanup and lint errors

--- a/app/src/main/res/layout/fr_membership.xml
+++ b/app/src/main/res/layout/fr_membership.xml
@@ -18,7 +18,7 @@
         android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_root"
+            android:id="@+id/cl_fragment_root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
