--- a/app/src/main/res/layout/request_cash_approved_layout.xml
+++ b/app/src/main/res/layout/request_cash_approved_layout.xml
@@ -76,6 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginTop="@dimen/dimen_24dp"
+            android:enabled="@{requestCashAdvanceInfo.claimCashEnabled}"
             android:onClick="@{() -> requestCashAdvanceInfo.claimCashNowAction.invoke()}"
             android:text="@string/claim_cash_now"
             app:layout_constraintEnd_toEndOf="parent"
