--- a/app/src/main/res/layout/fr_claim_cash.xml
+++ b/app/src/main/res/layout/fr_claim_cash.xml
@@ -242,9 +242,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_4dp"
-                android:text="@{viewModel.selectedDeliveryMethod.deliveryMethod.disclaimer}"
                 android:textAlignment="textStart"
+                app:deliveryMethod="@{viewModel.selectedDeliveryMethod}"
                 app:layout_constraintTop_toBottomOf="@id/rv_delivery_method"
+                app:userProfile="@{viewModel.userProfileData}"
                 tools:text="@string/delivery_method_express_disclaimer" />
 
             <com.google.android.material.button.MaterialButton
