--- a/app/src/main/res/layout/item_delivery_method.xml
+++ b/app/src/main/res/layout/item_delivery_method.xml
@@ -19,7 +19,8 @@
         android:background="@drawable/bg_round_30"
         android:backgroundTint="@android:color/transparent"
         android:clipToPadding="false"
-        android:outlineProvider="background">
+        android:outlineProvider="background"
+        app:disabled="@{viewModel.disabled}">
 
         <ImageView
             android:id="@+id/background_iv"
@@ -36,14 +37,13 @@
 
         <ImageView
             android:id="@+id/background_overlay_iv"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_margin="@dimen/dimen_1dp"
             android:contentDescription="@null"
             app:drawableRes="@{viewModel.deliveryMethod.background}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/bg_express_item" />
 
@@ -118,16 +118,33 @@
         <TextView
             android:id="@+id/delivery_method_description_tv"
             style="@style/TextView.C1"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_4dp"
             android:text="@{viewModel.deliveryMethod.description}"
             android:textAlignment="textStart"
             android:textColor="@color/colorGrayDC"
-            app:layout_constraintEnd_toEndOf="@id/delivery_method_value_tv"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintEnd_toStartOf="@id/iv_info"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@id/delivery_method_name_tv"
             app:layout_constraintTop_toBottomOf="@id/delivery_method_name_tv"
             tools:text="1-3 working days" />
+
+        <ImageView
+            android:id="@+id/iv_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:importantForAccessibility="no"
+            android:layout_marginStart="@dimen/dimen_4dp"
+            android:src="@drawable/ic_info"
+            app:layout_constraintBottom_toBottomOf="@id/delivery_method_description_tv"
+            app:layout_constraintEnd_toEndOf="@id/delivery_method_value_tv"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toEndOf="@id/delivery_method_description_tv"
+            app:layout_constraintTop_toTopOf="@id/delivery_method_description_tv"
+            app:tint="@color/colorGrayDC"
+            app:tooltip_text="@{viewModel.deliveryMethod.tooltipText}" />
 
         <TextView
             android:id="@+id/delivery_method_secondary_description_tv"
