feat: add request cash advance to quiz viewmodel

--- a/app/src/main/res/navigation/claim_cash_graph.xml
+++ b/app/src/main/res/navigation/claim_cash_graph.xml
@@ -23,6 +23,9 @@
         <argument
             android:name="cashAmount"
             app:argType="float" />
+        <argument
+            android:name="deliveryMethod"
+            app:argType="com.wolfpackdigital.cashli.domain.entities.claimCash.DeliveryMethod"/>
     </fragment>
 
 </navigation>
