Pause account flow and close account UI

--- a/app/src/main/res/navigation/more_graph.xml
+++ b/app/src/main/res/navigation/more_graph.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_moreFragment_to_membershipFragment"
             app:destination="@id/membershipFragment" />
+        <action
+            android:id="@+id/action_moreFragment_to_deleteAccountDialog"
+            app:destination="@id/deleteAccountDialog" />
     </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
@@ -69,4 +72,14 @@
         android:name="com.wolfpackdigital.cashli.presentation.membership.MembershipFragment"
         android:label="MembershipFragment"
         tools:layout="@layout/fr_membership" />
+
+    <dialog
+        android:id="@+id/deleteAccountDialog"
+        android:name="com.wolfpackdigital.cashli.presentation.more.deleteAccount.DeleteAccountDialog"
+        android:label="DeleteAccountDialog"
+        tools:layout="@layout/dialog_delete_account">
+        <argument
+            android:name="deleteAccountArgs"
+            app:argType="com.wolfpackdigital.cashli.presentation.entities.args.DeleteAccountArgs" />
+    </dialog>
 </navigation>
