--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,11 @@
         <item name="android:textColor">@color/colorGrayB6</item>
     </style>
 
+    <style name="RoundedCornersDialog" parent="Theme.MaterialComponents.Light.Dialog.Alert">
+        <item name="dialogCornerRadius">@dimen/dimen_20dp</item>
+        <item name="android:windowMinWidthMinor">70%</item>
+    </style>
+
     <!-- Buttons -->
     <style name="Widget.Cashli.Button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="fontFamily">@font/lato_bold</item>
