--- a/app/src/main/res/layout/item_radio_button.xml
+++ b/app/src/main/res/layout/item_radio_button.xml
@@ -19,6 +19,7 @@
             style="@style/CashliRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:checked="@{viewModel.checked}"
             android:clickable="false"
             android:focusable="false"
